--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<div class="ellipse1"><img src="assets/ellipse-1-icon.svg" alt="" class="icon" /></div>
+<div class="sweatsessionlogotransparent1"></div>
+<div class="signIn">Sign In</div>
+<div class="profileTopnav"><img src="assets/profiletopnav-icon.svg" alt="" class="icon2" /></div>
+<div class="profileTopnav2"></div>
+<div class="profileTopnav3"><img src="assets/profiletopnav-icon2.svg" alt="" class="icon3" /></div>
+<div class="profileTopnav4"></div>
+<div class="donTHaveAnAccount">Don't have an account?</div>
+<div class="registerHere">
+  <p class="labelWrapper">
+    <span class="label">Register</span>
+    <span class="label2"></span>
+    <span class="label3">Here</span>
+  </p>
+</div>
+<div class="login">Login</div>
+<div class="vector"><img src="assets/vector-icon.svg" alt="" class="icon4" /></div>
+<div class="password">Password</div>
+<div class="email">Email</div>
