--- a/src/app/messages/messages.page.html
+++ b/src/app/messages/messages.page.html
@@ -5,9 +5,7 @@
         <ion-title>Menu</ion-title>
       </ion-toolbar>
     </ion-header>
-    
-    <!-- We will put the Menu Items Heree -->
-
+    <ion-content class="ion-padding">This is the menu content.</ion-content>
   </ion-menu>
   <div class="ion-page" id="main-content">
     <ion-header>
@@ -20,7 +18,7 @@
     </ion-header>
     
     <!-- Page content Goes Here -->
-    <!-- <ion-img src="assets/img/Asset 1.jpg"></ion-img> -->
+    <!-- <ion-img src="assets/img/1.jpg"></ion-img> -->
     
     
     
@@ -40,12 +38,10 @@
           <ion-icon name="home-outline"></ion-icon>
           Home
         </ion-tab-button>
-        
         <ion-tab-button tab="Messages">
           <ion-icon name="send-sharp"></ion-icon>
           Messages
-        </ion-tab-button >
-
+        </ion-tab-button>
         <ion-tab-button tab="search">
           <ion-icon name="search"></ion-icon>
           Search
