routing fixed, extra pages added

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -36,12 +36,12 @@
       <ion-router-outlet></ion-router-outlet>
     
       <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="home">
+        <ion-tab-button tab="dashboard">
           <ion-icon name="home-outline"></ion-icon>
           Home
         </ion-tab-button>
         
-        <ion-tab-button tab="Messages">
+        <ion-tab-button tab="messages">
           <ion-icon name="send-sharp"></ion-icon>
           Messages
         </ion-tab-button >
@@ -50,11 +50,11 @@
           <ion-icon name="search"></ion-icon>
           Search
         </ion-tab-button>
-        <ion-tab-button tab="library">
+        <ion-tab-button tab="leaderboard">
           <ion-icon name="bar-chart-outline"></ion-icon>
           Boards
         </ion-tab-button>
-        <ion-tab-button tab="search">
+        <ion-tab-button tab="userprofile">
           <ion-icon name="person-outline"></ion-icon>
           Profile
         </ion-tab-button>
