--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>messages</ion-title>
+    <ion-title>search</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">messages</ion-title>
+      <ion-title size="large">search</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
