--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true">
+
   <ion-menu contentId="main-content">
     <ion-header>
       <ion-toolbar>
@@ -6,22 +6,30 @@
       </ion-toolbar>
     </ion-header>
     
-    <!-- We will put the Menu Items Heree -->
+     Item in menu
 
   </ion-menu>
+
   <div class="ion-page" id="main-content">
     <ion-header>
       <ion-toolbar>
         <ion-buttons slot="start">
           <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>Home</ion-title>
+
+        <ion-chip slot = "start">
+          <ion-avatar  class = "HomeProfile">
+            <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+          </ion-avatar>
+          <ion-label>John Doe</ion-label>
+        </ion-chip>
+
       </ion-toolbar>
     </ion-header>
     
     <!-- Page content Goes Here -->
     <!-- <ion-img src="assets/img/Asset 1.jpg"></ion-img> -->
-    
+    tyftytfyty
     
     
     
@@ -61,7 +69,7 @@
       </ion-tab-bar>
     </ion-tabs>
   </div>
-</ion-content>
+
   
   
 
