--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,13 +1,26 @@
-<ion-header [translucent]="true">
+<ion-header [translucent] = "true">
   <ion-toolbar>
-    <ion-title>search</ion-title>
+    <ion-title>
+      Search
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">search</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class = "ion-padding">
+
+    <ion-searchbar 
+            placeholder = "Search for a location"
+            [(ngModel)] = "searchTerm"
+            showCancelButton = "focus"
+            animated
+            >
+    </ion-searchbar>
+
+  <ion-list>
+    <ion-item *ngFor="let item of observableData | async">
+      <ion-label>{{item.name}}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
+
+
