--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -5,3 +5,82 @@
     justify-items: center;
     overflow: hidden;
   }
+
+.registerButton{
+  margin-left: 25%;
+  width:50%;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.registrationContainer {
+  --ion-background-color: #F1FAEE;
+}
+
+.logo-img{
+width: 150px;
+height: 150px;
+margin-bottom: 5%;
+}
+
+.registrationHeader {
+  color: #000;
+  font-size: 30px;
+  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+    'Liberation Sans', sans-serif;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 10%;
+    font-weight: bolder;
+}
+
+.registrationGrid{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: column;
+}
+
+ion-button {
+  --background: #A8DADC;
+  --background-hover: #9ce0be;
+  --background-activated: #88f4be;
+  --background-focused: #88f4be;
+
+  --color: #000;
+
+  --border-radius: 30px;
+  --border-color: #E63946;
+  --border-style: solid;
+  --border-width: 3px;
+  
+
+  --ripple-color: deeppink;
+
+  --padding-top: 20px;
+  --padding-bottom: 20px;
+}
+
+.emailSection, .passwordSection, .cPasswordSection{
+  width: 80%;
+  margin-left: 10%;
+  --border-radius: 30px;
+    border-radius: 30px;
+    --background: #A8DADC;
+    border: 3px solid #E63946;
+    margin-bottom: 5%;
+    // padding-top: 5%;
+    // padding-bottom: 5%;
+  //   --margin-top: 50px;
+  // --margin-bottom: 50px;
+}
+
+.emailSection{
+  margin-top: 15%;
+}
+
+.cPasswordSection{
+  margin-bottom: 15%;
+}
+
