--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -21,8 +21,13 @@ ion-icon {
     color:aqua;
 }
 
+.clickable {
+    margin-right: 15px;
+}
+
 .toolbar {
-    height:40px;
+    height:50px;
+    background-color: transparent;
 }
 
 ion-avatar {
