working on search

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,6 @@
 </ion-menu>
 
 
-  </ion-menu>
   <ion-header>
     <ion-toolbar class="toolbar">
       <ion-buttons slot="start">
@@ -17,19 +16,10 @@
       </ion-toolbar>
     </ion-header>
     
+    <ion-content>
     <!-- Page content Goes Here -->
     <!-- <ion-img src="assets/img/Asset 1.jpg"></ion-img> -->
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
+    <div class="container">
     <ion-tabs>
       <ion-router-outlet></ion-router-outlet>
     
