--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,7 +13,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      <ion-chip>
+      <ion-chip class="clickable" routerLink="/home/userprofile">
         Hi User
         <ion-avatar>
           <img src="https://ionicframework.com/docs/img/demos/avatar.svg"/>
@@ -24,6 +24,7 @@
               class="clickable" slot="end">
     </ion-icon>
     <ion-icon name="notifications-outline" 
+              routerLink="/home/notifications"
               class="clickable" slot="end">
     </ion-icon>
   </ion-toolbar>
