--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,27 @@
 <ion-menu contentId="main-content">
   <ion-header>
-    <ion-toolbar>
+    <ion-toolbar class="toolbar">
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-content>
+    <ion-item class="clickable" routerLink="/settings">
+      <ion-icon name="settings-outline">
+      </ion-icon>
+      <ion-label class="menu-label">
+        Settings
+      </ion-label>
+    </ion-item>
+
+    <ion-item class="clickable" routerLink="/logout">
+      <ion-icon name="log-out-outline">
+      </ion-icon>
+      <ion-label class="menu-label">
+        Logout
+      </ion-label>
+    </ion-item>
+  </ion-content>
 </ion-menu>
 
 
