Splash also added

--- a/src/app/splash/splash.page.scss
+++ b/src/app/splash/splash.page.scss
@@ -6,7 +6,13 @@
     justify-items: center;
     overflow: hidden;
   }
-
+  .getSButton{
+    margin-left: 25%;
+    width:50%;
+    justify-content: center;
+    font-size: 20px;
+  }
+  
   .h1
   {
     font-size: 20px;
