--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent] = "true">
+<ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
       Search
@@ -6,21 +6,25 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class = "ion-padding">
+<ion-content class="ion-padding">
+  <ion-searchbar
+    placeholder="Search for a location"
+    [(ngModel)]="searchTerm"
+    (ionInput)="onSearchInput($event)"
+    animated
+  >
+</ion-searchbar>
 
-    <ion-searchbar 
-          placeholder="Search for a location"
-          [(ngModel)]="searchTerm"
-          (ionInput)="onSearchInput($event)"
-          animated
-            >
-    </ion-searchbar>
-
-  <ion-list>
-    <ion-item *ngFor="let item of filteredData$ | async">
-      <ion-label>{{item.name}}</ion-label>
-    </ion-item>
-  </ion-list>
+  <ion-card *ngFor="let item of filteredData$ | async">
+    <img [src]="item.image" alt="Silhouette of mountains" />
+    <ion-card-header>
+      <ion-card-title>{{ item.name }}</ion-card-title>
+      <ion-card-subtitle>{{ item.location }}</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      {{ item.description }}
+    </ion-card-content>
+  </ion-card>
+  
 </ion-content>
-
-
