Added user profile

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -76,6 +76,10 @@
       <ion-icon name="logo-ionitron"></ion-icon>
       chat bot
     </ion-tab-button>
+    <ion-tab-button tab="userprofile">
+      <ion-icon name="person-outline"></ion-icon>
+      Profile
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
  
