--- a/src/app/userprofile/userprofile.page.html
+++ b/src/app/userprofile/userprofile.page.html
@@ -1,13 +1,64 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>userprofile</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">userprofile</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content> 
+  <ion-card>
+  
+    <ion-header>
+      <ion-toolbar>
+        <ion-title class="header">Profile</ion-title>
+        <ion-title class="header" slot="end">Edit</ion-title>
+
+      </ion-toolbar>
+    </ion-header>
+    <br>
+    <br>
+
+ 
+
+ 
+ <div class="flex-center">   
+    
+    <ion-img src="assets/Asset 1.png" alt="logo-image" class="image"></ion-img>
+          
+</div>
+  
+  <ion-text class="flex-center"><h3>Robert</h3></ion-text>
+  <ion-card-content  ><div class="flex-center">
+    <ion-card class="card" >
+    <ion-card-content >
+      <ion-item><ion-label>Hi , its Alex out here doing dope things</ion-label></ion-item>
+    </ion-card-content>
+  </ion-card></div>
+</ion-card-content>
+
+  <ion-card-content >
+    <ion-title class="title"><b>24</b><br>Friends</ion-title>
+    <ion-title class="title"><b>3</b><br>GymGroups</ion-title>
+  </ion-card-content>
+ 
+  
+    <div class="flex-center"> 
+      <ion-card class="card">
+      <ion-card-content>
+        <ion-button class="button"expand="block" ><ion-icon name="bar-chart-outline" slot="start"></ion-icon>&nbsp;LeaderBoard &nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+      </ion-card-content>
+      <ion-card-content>
+        <ion-button class="button"expand="block" ><ion-icon name="chatbubble-outline" slot="start"></ion-icon>&nbsp;Chats&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+      </ion-card-content>
+      <ion-card-content>
+        <ion-button class="button"expand="block" ><ion-icon name="megaphone-outline" slot="start"></ion-icon>&nbsp;Groups&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+      </ion-card-content>
+      <ion-card-content>
+        <ion-button class="button"expand="block" ><ion-icon name="clipboard-outline" slot="start"></ion-icon>&nbsp;Schedule&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+      </ion-card-content>
+    </ion-card></div>
+    <br>
+    <br>
+    
+  
+
+
+
+
+  </ion-card>
+  
 </ion-content>
