Fixed ion card issue

--- a/src/app/userprofile/userprofile.page.html
+++ b/src/app/userprofile/userprofile.page.html
@@ -1,6 +1,6 @@
 
 <ion-content> 
-  <ion-card>
+ 
   
     <ion-header>
       <ion-toolbar>
@@ -9,26 +9,22 @@
 
       </ion-toolbar>
     </ion-header>
-    <br>
-    <br>
 
- 
-
- 
- <div class="flex-center">   
+ <p class="flex-center">   
     
     <ion-img src="assets/Asset 1.png" alt="logo-image" class="image"></ion-img>
           
-</div>
+ </p>
+
   
-  <ion-text class="flex-center"><h3>Robert</h3></ion-text>
-  <ion-card-content  ><div class="flex-center">
-    <ion-card class="card" >
-    <ion-card-content >
+  <div class="flex-center"><h3>Robert</h3></div>
+
+  <p class="flex-center">
+    <ion-card-content class="card" >
       <ion-item><ion-label>Hi , its Alex out here doing dope things</ion-label></ion-item>
     </ion-card-content>
-  </ion-card></div>
-</ion-card-content>
+  </p>
+
 
   <ion-card-content >
     <ion-title class="title"><b>24</b><br>Friends</ion-title>
@@ -55,10 +51,5 @@
     <br>
     
   
-
-
-
-
-  </ion-card>
   
 </ion-content>
