Edit Profile(Some front End)

--- a/src/app/userprofile/userprofile.page.html
+++ b/src/app/userprofile/userprofile.page.html
@@ -18,7 +18,7 @@
 
   
   <div class="flex-center"><h3>Robert</h3></div>
-
+  <!-- <div class="flex-center" href = size = "small">Edit</div> -->
   <p class="flex-center">
     <ion-card-content class="card" >
       <ion-item><ion-label>Hi , its Alex out here doing dope things</ion-label></ion-item>
@@ -46,6 +46,10 @@
       <ion-card-content>
         <ion-button class="button"expand="block" ><ion-icon name="clipboard-outline" slot="start"></ion-icon>&nbsp;Schedule&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
+      <ion-card-content>
+        <ion-button class="button"expand="block" routerLink="/home/setprofile"><ion-icon name="create-outline" slot="start"></ion-icon>&nbsp;Edit&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+      </ion-card-content>
+      
     </ion-card></div>
     
     
