--- a/src/app/setprofile/setprofile.page.html
+++ b/src/app/setprofile/setprofile.page.html
@@ -1,13 +1,46 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>setprofile</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <ion-card>
+    <ion-card>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">setprofile</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+      <ion-card-header>
+        <ion-card-title>Edit Profile</ion-card-title>
+      </ion-card-header>
+  
+      <div class="preview-container" *ngIf="oldProfilePicture">
+        <img [src]="oldProfilePicture" alt="Old Profile Picture">
+      </div>
+  
+      <div class="preview-container" *ngIf="selectedPicture">
+        <img [src]="selectedPicture" alt="New Profile Picture">
+      </div>
+      
+      <ion-card-content>
+        <ion-item>
+          <ion-label position="stacked">Choose Picture</ion-label>
+          <input type="file" accept="image/*" (change)="onPictureChange($event)">
+        </ion-item>
+      </ion-card-content>
+
+      <ion-item>
+        <ion-label position="stacked">Name</ion-label>
+        <ion-input type="text"  [(ngModel)]="user.name"></ion-input>
+      </ion-item>
+  
+      <ion-item>
+        <ion-label position="stacked">Email</ion-label>
+        <ion-input type="email"  [(ngModel)]="user.email"></ion-input>
+      </ion-item>
+  
+      <ion-item>
+        <ion-label position="stacked">Bio</ion-label>
+        <ion-textarea  [(ngModel)]="user.bio"></ion-textarea>
+      </ion-item>
+  
+      
+      <ion-item>
+        <ion-label position="stacked">Password</ion-label>
+        <ion-input type="password"  [(ngModel)]="user.password"></ion-input>
+      </ion-item>
+      <ion-button expand="block" (click)="saveProfile()">Save</ion-button>
+  </ion-card>
+
