--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -5,43 +5,15 @@
       <ion-card-header>
         <ion-card-title>Edit Profile</ion-card-title>
       </ion-card-header>
-      <div class="avatar-container" (click)="openPicturePopup()">
+      <!-- <div class="avatar-container" (click)="openPicturePopup()"> -->
+      <div class="avatar-container">
         <ion-avatar  class="preview-container" *ngIf="ProfilePicture">
           <img [src]="ProfilePicture" alt="Old Profile Picture">
         </ion-avatar>
       </div>
-      
-      <ion-card-content>
-        <ion-item>
-          <ion-label position="stacked"> Choose New Profile Picture </ion-label>
-          <input type="file" accept="image/*" (change)="onPictureChange($event)">
-        </ion-item>
-      </ion-card-content>
 
-       <!-- Edit Picture Popup -->
-       <ion-modal
-       cssClass="edit-picture-modal"
-       [mode]="modalMode"
-       [(ngModel)]="ProfilePicture"
-       (ionBackdropTap)="closePicturePopup()"
-     >
-       <ion-header>
-         <ion-toolbar>
-           <ion-title>Edit Picture</ion-title>
-           <ion-buttons slot="end">
-             <ion-button (click)="closePicturePopup()">Cancel</ion-button>
-           </ion-buttons>
-         </ion-toolbar>
-       </ion-header>
-       </ion-modal>
+        <ion-input type="file" accept="image/*" (change)="onPictureChange($event)"></ion-input>
 
-       <ion-content>
-        <!-- Popup content -->
-        <h2>Edit Picture</h2>
-        <!-- Additional form or components for editing the picture -->
-        <!-- ... -->
-        <ion-button expand="block" (click)="savePicture()">Save</ion-button>
-      </ion-content>
 
       <ion-item>
         <ion-label position="stacked">Name</ion-label>
@@ -50,7 +22,7 @@
   
       <ion-item>
         <ion-label position="stacked">Email</ion-label>
-        <ion-input type="email"  [(ngModel)]="user.email"></ion-input>
+        <ion-input type="email"  disabled = "true" [(ngModel)]="user.email"></ion-input>
       </ion-item>
   
       <ion-item>
