--- a/src/app/pages/setprofile/setprofile.page.scss
+++ b/src/app/pages/setprofile/setprofile.page.scss
@@ -12,3 +12,38 @@
   width: 100%;
   height: 100%;
 }
+
+.avatar-container {
+    position: relative;
+  }
+  
+  .avatar-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    opacity: 0;
+  }
+
+
+  .choose-file-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+  }
+  
+  .file-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 2;
+    cursor: pointer;
+  }
+  
