Added routing to userprofile

--- a/src/app/userprofile/userprofile.page.html
+++ b/src/app/userprofile/userprofile.page.html
@@ -35,16 +35,16 @@
     <div class="flex-center"> 
       <ion-card class="card">
       <ion-card-content>
-        <ion-button class="button"expand="block" ><ion-icon name="bar-chart-outline" slot="start"></ion-icon>&nbsp;LeaderBoard &nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+        <ion-button class="button"expand="block" (click)="Leaderboard()"><ion-icon name="bar-chart-outline" slot="start"></ion-icon>&nbsp;LeaderBoard &nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
       <ion-card-content>
-        <ion-button class="button"expand="block" ><ion-icon name="chatbubble-outline" slot="start"></ion-icon>&nbsp;Chats&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+        <ion-button class="button"expand="block" (click)="Chats()"><ion-icon name="chatbubble-outline" slot="start"></ion-icon>&nbsp;Chats&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
       <ion-card-content>
-        <ion-button class="button"expand="block" ><ion-icon name="megaphone-outline" slot="start"></ion-icon>&nbsp;Groups&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+        <ion-button class="button"expand="block" (click)="Groups()"><ion-icon name="megaphone-outline" slot="start"></ion-icon>&nbsp;Groups&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
       <ion-card-content>
-        <ion-button class="button"expand="block" ><ion-icon name="clipboard-outline" slot="start"></ion-icon>&nbsp;Schedule&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+        <ion-button class="button"expand="block" (click)="Schedule()"><ion-icon name="clipboard-outline" slot="start"></ion-icon>&nbsp;Schedule&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
     </ion-card></div>
     
