--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -12,14 +12,17 @@
 
     <ion-text class="registrationHeader"> Register </ion-text>
 
-    <form (ngSubmit)="register()">
+    <form [formGroup]="registrationForm"
+    ngxsForm="register.registrationForm"
+    (submit)="register()">
       <ion-item class="emailSection">
         <ion-img class="emailLogo" src="/assets/vector-icon.svg"></ion-img>
         <ion-label>Email:</ion-label>
+        <!-- aria-label="Email" -->
         <ion-input
           type="email"
           name="email"
-          [(ngModel)]="email"
+          formControlName="email"
           required
         ></ion-input>
       </ion-item>
@@ -27,10 +30,13 @@
       <ion-item class="passwordSection">
         🔑
         <ion-label>Password:</ion-label>
+        <!-- aria-label="Password" -->
         <ion-input
           type="password"
           name="password"
-          [(ngModel)]="password"
+          minlength="6"
+          maxlength="25"
+          formControlName="password"
           required
         ></ion-input>
       </ion-item>
@@ -41,7 +47,9 @@
         <ion-input
           type="password"
           name="cPassword"
-          [(ngModel)]="cPassword"
+          minlength="6"
+          maxlength="25"
+          formControlName="cPassword"
           required
         ></ion-input>
       </ion-item>
