--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -1,11 +1,13 @@
-<ion-content>
+<p>edit profile works</p>
+
+<!-- <ion-content>
   <ion-card>
     <ion-card>
 
       <ion-card-header>
         <ion-card-title>Edit Profile</ion-card-title>
       </ion-card-header>
-      <!-- <div class="avatar-container" (click)="openPicturePopup()"> -->
+      <!-- <div class="avatar-container" (click)="openPicturePopup()">
       <div class="avatar-container">
         <ion-avatar  class="preview-container" *ngIf="ProfilePicture">
           <img [src]="ProfilePicture" alt="Old Profile Picture">
@@ -44,4 +46,4 @@
       <ion-button expand="block" (click)="saveProfile()">Save</ion-button>
     
   </ion-card>
-
+ -->
