--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -1,14 +1,11 @@
-<p>edit profile works</p>
 
-<!-- <ion-content>
-  <ion-card>
+<ion-content>
     <ion-card>
 
       <ion-card-header>
         <ion-card-title>Edit Profile</ion-card-title>
       </ion-card-header>
-      <!-- <div class="avatar-container" (click)="openPicturePopup()">
-      <div class="avatar-container">
+       <div class="avatar-container" (click)="openPicturePopup()">
         <ion-avatar  class="preview-container" *ngIf="ProfilePicture">
           <img [src]="ProfilePicture" alt="Old Profile Picture">
         </ion-avatar>
@@ -16,6 +13,8 @@
 
         <ion-input type="file" accept="image/*" (change)="onPictureChange($event)"></ion-input>
 
+    </ion-card>
+    <ion-card>
 
       <ion-item>
         <ion-label position="stacked">Name</ion-label>
@@ -46,4 +45,5 @@
       <ion-button expand="block" (click)="saveProfile()">Save</ion-button>
     
   </ion-card>
- -->
+
+</ion-content>
