--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -39,6 +39,7 @@
       </ion-chip>
     </ion-title>
     <ion-icon name="receipt-outline" 
+              routerLink="/home/workout-scheduling"
               class="clickable" slot="end">
     </ion-icon>
     <ion-icon name="notifications-outline" 
