--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -44,20 +44,22 @@
       Sign In
     </ion-text>
 
-    <form>
+    <form [formGroup]="loginForm"
+    ngxsForm="login.loginForm"
+    (submit)="userLogin()">
       <ion-item class="emailSection">
         <ion-img class="emailLogo" src="/assets/vector-icon.svg"></ion-img>
         <ion-label position="email"></ion-label>
-        <ion-input label="" type="email" placeholder="Enter your email"  required></ion-input> <!--[(ngModel)]="email"-->
+        <ion-input label="" type="email" placeholder="Enter your email"  formControlName="email" required></ion-input> <!--[(ngModel)]="email"-->
       </ion-item>
 
       <ion-item class="passwordSection">
         🔑
         <ion-label position="password">Password</ion-label>
-        <ion-input label="" type="password" placeholder="Enter your password"  required></ion-input>  <!--[(ngModel)]="password"-->
+        <ion-input label="" type="password" placeholder="Enter your password"  formControlName="password" required></ion-input>  <!--[(ngModel)]="password"-->
       </ion-item>
 
-      <ion-button id="loginButton" expand="block" shape="round" fill="clear">
+      <ion-button id="loginButton" expand="block" shape="round" fill="clear" type="submit">
         <!-- <ion-label class="labelWrapper"> -->
           <span class="label">Login</span>
         <!-- </ion-label> -->
@@ -66,7 +68,7 @@
     </form><!-- <form (submit)="login()"> -->
 
       <ion-text class="question">Don't have an account?</ion-text>
-      <ion-button id="registerButton" expand="block" shape="round" fill="clear">
+      <ion-button id="registerButton" expand="block" shape="round" fill="clear" routerLink="/register">
         <ion-label class="labelWrapper">
           <span class="label">Register Here</span>
         </ion-label>
