groups added, other user page added and home routing modified

--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -1,3 +1,12 @@
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-item>
+      <ion-icon name="arrow-back-outline" routerLink="/userprofile"></ion-icon>
+      <ion-title>User</ion-title>
+    </ion-item>
+  </ion-toolbar>
+</ion-header>
+
 
 <ion-content>
     <ion-card>
