--- a/src/app/pages/userprofile/userprofile.page.scss
+++ b/src/app/pages/userprofile/userprofile.page.scss
@@ -60,10 +60,10 @@
 ion-item{
     --background:#90CAF3;
 }
-.header{
-    display: inline-block;
-    --background:lightgrey;
-}
-ion-toolbar{
-    --background:lightgrey;
-}
+// .header{
+//     display: inline-block;
+//     --background:lightgrey;
+// }
+// ion-toolbar{
+//     --background:lightgrey;
+// }
