--- a/src/app/pages/otheruser/otheruser.page.html
+++ b/src/app/pages/otheruser/otheruser.page.html
@@ -1,13 +1,43 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>otheruser</ion-title>
+    <ion-item>
+      <ion-icon name="arrow-back-outline" routerLink="/friends"></ion-icon>
+      <ion-title>otheruser</ion-title>
+      <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+    </ion-item>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">otheruser</ion-title>
-    </ion-toolbar>
-  </ion-header>
+ <ion-card class="otheruser-profile">
+  <ion-item>
+    <ion-avatar>
+      <img src="assets/sweatsessionlogotransparent1.png"/>
+    </ion-avatar>
+  </ion-item>
+  <ion-item id="userName">
+      Joe Black
+      <ion-button slot="end">
+        <ion-icon name="person-outline"></ion-icon>
+        friends
+      </ion-button>
+  </ion-item>
+  <ion-item id="userBio">
+  ......bio......
+  </ion-item>
+ </ion-card>
+ <ion-card>
+  <ion-item>
+    <ion-icon name="barbell-outline"></ion-icon>
+    <ion-card-header>WorkoutSchedule</ion-card-header>
+    <ion-button slot="end">view</ion-button>
+  </ion-item>
+ </ion-card>
+ <ion-card>
+  <ion-item>
+    <ion-icon name="people-outline"></ion-icon>
+    <ion-card-header>30 Friends</ion-card-header>
+    <ion-button slot="end">view</ion-button>
+  </ion-item>
+ </ion-card>
 </ion-content>
