set profile backend

--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -41,7 +41,7 @@
       </ion-item>
   
       
-      <ion-item>
+      <!-- <ion-item>
         <ion-label position="stacked">Password</ion-label>
         <ion-input type="password"  [(ngModel)]="user.password"></ion-input>
       </ion-item>
@@ -49,7 +49,7 @@
       <ion-item>
         <ion-label position="stacked">Confirm Password</ion-label>
         <ion-input type="password"  [(ngModel)]="user.cPassword"></ion-input>
-      </ion-item>
+      </ion-item> -->
 
       <ion-button expand="block" (click)="saveProfile()">Save</ion-button>
     
