workout schedule components added

--- a/src/app/pages/otheruser/otheruser.page.html
+++ b/src/app/pages/otheruser/otheruser.page.html
@@ -30,14 +30,14 @@
   <ion-item>
     <ion-icon name="barbell-outline"></ion-icon>
     <ion-card-header>WorkoutSchedule</ion-card-header>
-    <ion-button slot="end">view</ion-button>
+    <ion-button slot="end" routerLink="/workout-scheduling">view</ion-button>
   </ion-item>
  </ion-card>
  <ion-card>
   <ion-item>
     <ion-icon name="people-outline"></ion-icon>
     <ion-card-header>30 Friends</ion-card-header>
-    <ion-button slot="end">view</ion-button>
+    <ion-button slot="end" routerLink="/friends">view</ion-button>
   </ion-item>
  </ion-card>
 </ion-content>
