@Daniel-Bezuidenhout check the commented part on schedule

--- a/src/app/pages/search/search.page.html
+++ b/src/app/pages/search/search.page.html
@@ -11,6 +11,7 @@
     placeholder="Search for a location"
     [(ngModel)]="searchTerm"
     (ionInput)="onSearchInput($event)"
+    color="light"
     animated
   >
 </ion-searchbar>
