--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -18,6 +18,49 @@
   ></workout-schedule>
 </ion-content>
 
+
+<!-- @daniel check this out tell me what you think ;) -->
+
+<!-- <=========================uncomment from here========================> -->
+<!-- you can swipe the item both ways to edit or delete -->
+
+<!-- <ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-item>
+      <ion-icon name="arrow-back-outline" routerLink="/userprofile"></ion-icon>
+      <ion-title>Schedules</ion-title>
+      <ion-item slot="end"  class="add-schedule-button" click="addSchedule()">
+        <ion-icon name="add-outline"></ion-icon>
+        <ion-icon name="receipt-outline"></ion-icon>
+      </ion-item>
+    </ion-item>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true">
+  <ion-searchbar placeholder="find schedule"></ion-searchbar>
+  <ion-item-sliding *ngFor ="let schedule of schedules">
+
+    <ion-item-options side="start">
+      <ion-item-option color="success">Edit</ion-item-option>
+    </ion-item-options>
+
+    <ion-item button>
+        <ion-icon name="receipt-outline"></ion-icon>
+        <ion-label >{{schedule}}</ion-label>
+    </ion-item>
+
+  <ion-item-options side="end">
+    <ion-item-option>Favorite</ion-item-option>
+    <ion-item-option color="danger">Delete</ion-item-option>
+  </ion-item-options>
+</ion-item-sliding>
+</ion-content> -->
+
+<!-- <=========================TO HERE ========================> -->
+
+
+
 <!-- <ion-content [fullscreen]="true">
   <ion-menu contentId="main-content">
     <ion-header>
