--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -55,13 +55,13 @@
     <ion-item-option color="danger">Delete</ion-item-option>
   </ion-item-options>
 </ion-item-sliding>
-</ion-content> -->
+</ion-content>  -->
 
-<!-- <=========================TO HERE ========================> -->
+<!-- <=========================TO HERE ========================>
 
 
 
-<!-- <ion-content [fullscreen]="true">
+ <ion-content [fullscreen]="true">
   <ion-menu contentId="main-content">
     <ion-header>
       <ion-toolbar>
