adding mock data to the profile

--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -41,13 +41,13 @@
       </ion-item>
   
       
-      <!-- <ion-item>
-        <ion-label position="stacked">Password</ion-label>
-        <ion-input type="password"  [(ngModel)]="user.password"></ion-input>
+      <ion-item>
+        <ion-label position="stacked">Phone Number</ion-label>
+        <ion-input type="text"  [(ngModel)]="user.phoneNumber"></ion-input>
       </ion-item>
 
-      <ion-item>
-        <ion-label position="stacked">Confirm Password</ion-label>
+      <!-- <ion-item>
+        <ion-label position="stacked">Change Password</ion-label>
         <ion-input type="password"  [(ngModel)]="user.cPassword"></ion-input>
       </ion-item> -->
 
