modified friends page and workoutschedule page

--- a/src/app/pages/friends/friend/friend.component.html
+++ b/src/app/pages/friends/friend/friend.component.html
@@ -1,4 +1,4 @@
-<ion-card routerLink="/otheruser">
+<ion-card (click)="viewOtherUser()">
   <ion-item class="friend">
     <!-- <ion-button>remove</ion-button> -->
     <ion-avatar>
